# test_cutting

./: Cargo.toml  bandle.py  bundled_main.rs
assets/: area_cache_hull  bounded_windage_area_hull  bow_area_cache_hull
assets/disp_bounded_hull/195/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+154 more)
src/: hydrostatics.rs  main.rs  plane.rs  sliced_mesh.rs
src/tests/: basic_test.rs  floating_position_test.rs  hydrostatic.rs  mod.rs  simple_solids.rs  sofia.rs  strength.rs  windage.rs
src/tools/: file_io.rs  hydrostatics.rs  mod.rs  plane.rs  sliced_mesh.rs  windage.rs  windage_edge.rs  windage_triangles.rs  windage_voxels.rs
src/tools/floating_position/: floating_position.rs  mod.rs
src/tools/hydrostatic/: hydrostatics.rs  mod.rs  plane.rs  sliced_mesh.rs
src/tools/local_cache/: file_io.rs  mod.rs
src/tools/local_cache/bow_area_cache/: cache.rs  mod.rs
src/tools/local_cache/cache/: mod.rs
src/tools/local_cache/displacement_bound_cache/: cache.rs  mod.rs
src/tools/local_cache/displacement_cache/: cache.rs  mod.rs
src/tools/local_cache/windage_cache/: cache.rs  mod.rs
src/tools/math/: bound.rs  bounds.rs  mod.rs  position.rs
src/tools/strength/: hull.rs  mod.rs  slice.rs
